FIX :- Scrollbar white background fix.

--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ body
 
 ::-webkit-scrollbar
 {
-    background: transparent;
+    background: #000000;
     width: 10px;
 }
 
